--- a/.github/workflows/tagpr.yml
+++ b/.github/workflows/tagpr.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_PAT }}
-      - uses: Songmu/tagpr@main
+      - uses: Songmu/tagpr@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
